feat: teaser image and flyouts

--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -45,8 +45,7 @@
     <section class="teaser">
       <div class="teaser__media">
         <picture>
-          <source media="(max-width:480px)" srcset="assets/header-mobile@2x.webp 2x, assets/header-mobile.webp 1x"/>
-          <img srcset="assets/header@2x.webp 2x" src="assets/header.webp" width="1920" height="1200"
+          <img srcset="assets/header-woman@2x.webp 2x" src="assets/header-woman.webp" width="1920" height="1200"
                alt="Some alternative text for screen readers describing the image"/>
         </picture>
       </div>
@@ -67,7 +66,110 @@
       </div>
       <div class="product-list__filter">
         <p-button-pure icon="none" type="button">Remove All</p-button-pure>
-        <p-button variant="secondary" type="button" icon="filter" hide-label="{base: true, s: false }">Filter (3)</p-button>
+        <p-button variant="secondary" type="button" icon="filter" hide-label="{base: true, s: false }" aria="{ 'aria-haspopup': 'dialog' }" id="filter-button">Filter (3)</p-button>
+        <p-flyout id="filter-flyout">
+          <div slot="header">
+            <p-heading tag="h2" size="large">Product Filter</p-heading>
+          </div>
+          <div class="product-list__filter-items">
+            <p-accordion heading="Price Range" tag="h3" compact="true" size="medium">
+              <div class="product-list__filter-settings">
+                <p-text-field-wrapper label="Minimum Price">
+                  <input type="number" name="min-price" />
+                </p-text-field-wrapper>
+                <p-text-field-wrapper label="Maximum Price">
+                  <input type="number" name="max-price" />
+                </p-text-field-wrapper>
+              </div>
+            </p-accordion>
+            <p-accordion heading="Gender" tag="h3" compact="true" size="medium">
+              <div class="product-list__filter-settings">
+                <p-checkbox-wrapper label="Women">
+                  <input type="checkbox" name="woman" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Men">
+                  <input type="checkbox" name="man" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Kids">
+                  <input type="checkbox" name="kids" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Divers">
+                  <input type="checkbox" name="divers" />
+                </p-checkbox-wrapper>
+              </div>
+            </p-accordion>
+            <p-accordion heading="Collection" tag="h3" compact="true" size="medium">
+              <div class="product-list__filter-settings">
+                <p-checkbox-wrapper label="Dakar">
+                  <input type="checkbox" name="dakar" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Penske Motorsport">
+                  <input type="checkbox" name="penske-motorsport" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Transformers">
+                  <input type="checkbox" name="transformers" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Racing">
+                  <input type="checkbox" name="racong" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="RS 2.7">
+                  <input type="checkbox" name="rs-2-7" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Martini Racing">
+                  <input type="checkbox" name="martini-racing" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Motorsport">
+                  <input type="checkbox" name="motorsport" />
+                </p-checkbox-wrapper>
+              </div>
+            </p-accordion>
+            <p-accordion heading="Color" tag="h3" compact="true" size="medium">
+              <div class="product-list__filter-settings">
+                <p-checkbox-wrapper label="Blue">
+                  <input type="checkbox" name="blue" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Grey">
+                  <input type="checkbox" name="grey" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Black">
+                  <input type="checkbox" name="black" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="White">
+                  <input type="checkbox" name="white" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Red">
+                  <input type="checkbox" name="red" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Brown">
+                  <input type="checkbox" name="brown" />
+                </p-checkbox-wrapper>
+                <p-checkbox-wrapper label="Green">
+                  <input type="checkbox" name="green" />
+                </p-checkbox-wrapper>
+              </div>
+            </p-accordion>
+            <p-accordion heading="Size" tag="h3" compact="true" size="medium">
+              <div class="product-list__filter-settings">
+                <p-segmented-control columns="2" aria-label="Choose a product size">
+                  <p-segmented-control-item value="xs">XS</p-segmented-control-item>
+                  <p-segmented-control-item value="s">S</p-segmented-control-item>
+                  <p-segmented-control-item value="m">M</p-segmented-control-item>
+                  <p-segmented-control-item value="l">L</p-segmented-control-item>
+                  <p-segmented-control-item value="xl">XL</p-segmented-control-item>
+                  <p-segmented-control-item value="xxl">XXL</p-segmented-control-item>
+                  <p-segmented-control-item value="eu40">EU 40</p-segmented-control-item>
+                  <p-segmented-control-item value="eu41">EU 41</p-segmented-control-item>
+                  <p-segmented-control-item value="one-size">One Size</p-segmented-control-item>
+                  <p-segmented-control-item value="eu42">EU 42</p-segmented-control-item>
+                  <p-segmented-control-item value="eu43">EU 43</p-segmented-control-item>
+                  <p-segmented-control-item value="eu44">EU 44</p-segmented-control-item>
+                  <p-segmented-control-item value="eu45">EU 45</p-segmented-control-item>
+                  <p-segmented-control-item value="eu46">EU 46</p-segmented-control-item>
+                </p-segmented-control>
+              </div>
+            </p-accordion>
+          </div>
+        </p-flyout>
       </div>
       <article class="product-list__item"></article>
       <article class="product-list__item"></article>
@@ -80,6 +182,11 @@
         <p-text>Viewing 1 - 50 of 400</p-text>
         <p-button icon="none" type="button">Show 50 more results</p-button>
       </div>
+      <p-flyout id="whishlist-flyout">
+        <div slot="header">
+          <p-heading tag="h2" size="large">Add to Whishlist</p-heading>
+        </div>
+      </p-flyout>
     </section>
   </main>
   <footer class="footer"></footer>
