feat: add whishlist flyout

--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -186,6 +186,37 @@
         <div slot="header">
           <p-heading tag="h2" size="large">Add to Whishlist</p-heading>
         </div>
+        <div class="product-list__thumbnail"></div>
+        <p-heading tag="h3" size="large" class="product-list__heading">EviKnit® Trainers II</p-heading>
+        <p-text weight="semi-bold">SGD 680</p-text>
+        <p-text class="product-list__description">
+          Tongueless sports shoe in a modern sock-shoe style. Exclusive design using PUMA EvoKNIT® knit with a NITRO FOAM® sole for dynamism, cushioning and stability.
+        </p-text>
+        <div class="product-list__color">
+          <h4>Color: <span>Black</span></h4>
+          <div class="product-list__color-swatch"></div>
+        </div>
+        <div class="product-list__size">
+          <h4>Size: <span>-</span></h4>
+          <p-segmented-control columns="2" aria-label="Choose a product size">
+            <p-segmented-control-item value="xs">XS</p-segmented-control-item>
+            <p-segmented-control-item value="s">S</p-segmented-control-item>
+            <p-segmented-control-item value="m">M</p-segmented-control-item>
+            <p-segmented-control-item value="l">L</p-segmented-control-item>
+            <p-segmented-control-item value="xl">XL</p-segmented-control-item>
+            <p-segmented-control-item value="xxl">XXL</p-segmented-control-item>
+            <p-segmented-control-item value="eu40">EU 40</p-segmented-control-item>
+            <p-segmented-control-item value="eu41">EU 41</p-segmented-control-item>
+            <p-segmented-control-item value="one-size">One Size</p-segmented-control-item>
+            <p-segmented-control-item value="eu42">EU 42</p-segmented-control-item>
+            <p-segmented-control-item value="eu43">EU 43</p-segmented-control-item>
+            <p-segmented-control-item value="eu44">EU 44</p-segmented-control-item>
+            <p-segmented-control-item value="eu45">EU 45</p-segmented-control-item>
+            <p-segmented-control-item value="eu46">EU 46</p-segmented-control-item>
+          </p-segmented-control>
+          <p-button-pure icon="information">View size chart</p-button-pure>
+          <p-button>Add to whishlist</p-button>
+        </div>
       </p-flyout>
     </section>
   </main>
