feat: add product detail page

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
           <p-text-list-item>
             <a href="patterns/shop-product-list/">Shop Product List</a>
           </p-text-list-item>
+          <p-text-list-item>
+            <a href="patterns/shop-product-detail/">Shop Product Detail</a>
+          </p-text-list-item>
         </p-text-list>
       </div>
     </div>
