--- a/patterns/shop-product-detail/index.html
+++ b/patterns/shop-product-detail/index.html
@@ -115,7 +115,7 @@
       </article>
     </section>
     <p-modal heading="Size Chart" id="sizeChartModal">
-      <p-table class="size-chart">
+      <p-table caption="Size Chart for men" class="size-chart">
         <p-table-head>
           <p-table-head-row>
             <p-table-head-cell>Men</p-table-head-cell>
