equalized heading and optimized aspect ratios

--- a/patterns/shop-landing-page/index.html
+++ b/patterns/shop-landing-page/index.html
@@ -25,12 +25,14 @@
       </p-link-pure>
     </div>
     <nav class="header__categories" aria-label="Category Navigation">
-      <p-link-pure href="#" theme="dark" icon="none">Women</p-link-pure>
-      <p-link-pure href="#" theme="dark" icon="none">Men</p-link-pure>
-      <p-link-pure href="#" theme="dark" icon="none">Accessories</p-link-pure>
-      <p-link-pure href="#" theme="dark" icon="none">Model Cars</p-link-pure>
-      <p-link-pure href="#" theme="dark" icon="none">Porsche Originals</p-link-pure>
-      <p-link-pure href="#" theme="dark" icon="none">Porsche Design</p-link-pure>
+      <p-tabs-bar theme="dark">
+        <a href="../shop-product-list/">Women</a>
+        <a href="#">Men</a>
+        <a href="#">Accessories</a>
+        <a href="#">Model Cars</a>
+        <a href="#">Porsche Originals</a>
+        <a href="#">Porsche Design</a>
+      </p-tabs-bar>
     </nav>
   </header>
   <main>
