--- a/patterns/shop-product-detail/index.html
+++ b/patterns/shop-product-detail/index.html
@@ -13,8 +13,8 @@
       </p-button-pure>
       <p-button-pure class="header__button" icon="search" hide-label="true" type="button">Search</p-button-pure>
     </div>
-    <p-wordmark class="header__wordmark" href="/"></p-wordmark>
-    <p-crest class="header__crest" href="/"></p-crest>
+    <p-wordmark class="header__wordmark" href="../shop-landing-page/"></p-wordmark>
+    <p-crest class="header__crest" href="../shop-landing-page/"></p-crest>
     <div class="header__part header__part--end">
       <p-link-pure href="/" class="header__link" icon="user" hide-label="true">Account</p-link-pure>
       <p-link-pure href="/" class="header__link header__link--favorites" icon="heart" hide-label="true">
@@ -28,9 +28,9 @@
     <nav class="breadcrumb" aria-label="Breadcrumb navigation">
       <ol>
         <li><p-link-pure href="../shop-landing-page/" size="x-small" underline="true" icon="none">Home</p-link-pure></li>
-        <li class="breadcrumb__divider" aria-hidden="true">/</li>
+        <li class="breadcrumb__divider" role="presentation" aria-hidden="true">/</li>
         <li><p-link-pure href="../shop-product-list/" size="x-small" underline="true" icon="none">Woman</p-link-pure></li>
-        <li class="breadcrumb__divider" aria-hidden="true">/</li>
+        <li class="breadcrumb__divider" role="presentation" aria-hidden="true">/</li>
         <li><p-link-pure href="./" size="x-small" icon="none" aria="{ 'aria-current': 'page' }" class="breadcrumb--current">Shoes</p-link-pure></li>
       </ol>
     </nav>
