fixed path to local image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <p-wordmark></p-wordmark>
         <p-display align="center" tag="h1">Patterns</p-display>
         <p-heading align="center" size="large" tag="h3">Vite (Vanilla JS) x Porsche Design System</p-heading>
-          <p-link-pure href="https://github.com/porsche-design-system/patterns" target="_blank" icon-source="/github.svg" hide-label="true">Navigate to GitHub repository of Porsche Design System Patterns</p-link-pure>
+          <p-link-pure href="https://github.com/porsche-design-system/patterns" target="_blank" icon-source="/patterns/github.svg" hide-label="true">Navigate to GitHub repository of Porsche Design System Patterns</p-link-pure>
         <p-text-list [theme]="'auto'">
           <p-text-list-item>
             <a href="patterns/shop-landing-page/">Shop Landing Page</a>
