feat: add active-identifier to flyout-navigation of product list shop pattern  | sas

--- a/patterns/shop-product-list/index.html
+++ b/patterns/shop-product-list/index.html
@@ -297,7 +297,7 @@
   </div>
 </p-flyout>
 
-<p-flyout-navigation id="flyout-menu">
+<p-flyout-navigation id="flyout-menu" active-identifier="women">
   <p-flyout-navigation-item identifier="women" label="Women">
     <p-link-tile
       href="#"
